--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -10731,7 +10731,9 @@
 "~^/ab-testing\?utm.*$" "/ab-testing";
 "~^/AB-tests$" "/ab-testing";
 "~^/ab-test/$" "/ab-testing";
-"~^/fuzz-testing.*$" "/review/cat-sense#fuzz-testing";
+"~^/fuzz$" "/fuzz-testing";
+"~^/fuzz-test$" "/fuzz-testing";
+"~^/fuzzing.*$" "/fuzz-testing";
 "~^/about@hosting.*$" "/about#hosting";
 "~^/Collecting\?.*$" "/collectting";
 "~^/quine$" "https://en.wikipedia.org/wiki/Quine_(computing)";
@@ -20917,6 +20919,57 @@ ortraitfaces-1.png";
 "~^/index-newest$" "/index";
 "~^/index-newest\.md$" "/index.md";
 "~^/static/images/ind.*$" "/static/img/index";
+"~^/doc/rotten.com/library/autoerotic-asphyxiation/$" "/doc/rotten.com/library/sex/autoerotic-asphyxiation/index.html";
+"~^/style---guide$" "/style-guide";
+"~^/site-privacy$" "/404";
+"~^/scaling-hypothesis/page.*$" "/scaling-hypothesis";
+"~^/On-Disrespect.html$" "/on-disrespect";
+"~^/okongwu.*$" "/404";
+"~^/manchesterwebdesign.*$" "/404";
+"~^/license-agreement$" "/about#copyright";
+"~^/internetskt.*$" "/404";
+"~^/How-Should-We-Cri-tique-Research$" "/research-criticism";
+"~^/doc/tutorial/%C3%83%E2.*$" "/doc/tutorial/index";
+"~^/doc/statistics/bias/animal/2007-knight.pdfG.*$" "/doc/statistics/bias/animal/2007-knight.pdf";
+"~^/doc/spacedrepetition/2009-yates-spacedrepetition\.pdf.*$" "/doc/spaced-repetition/index";
+"~^/doc/rotten.com/library/bio/symbols/sep-man-red.png$" "/doc/rotten.com/library/bio/index.html";
+"~^/doc/rotten./2010-crc$" "/doc/anime/eva/2010-crc";
+"~^/.*/PDFs/HelpMenu\.pdf.*$" "/404";
+"~^/doc/psychology/novelty/1983-sluckin$" "/doc/psychology/novelty/1983-sluckin.pdf";
+"~^/doc/ps19-westbury\.pdf.*$" "/doc/psychology/novelty/2019-westbury.pdf";
+"~^/doc/personal/ztpi_process.php_files/$" "/doc/personal/2011-gwern-yourmorals.org/ztpi_process.html";
+"~^/doc/personal/2011-gwern-yourmorals.org/epq_process.php_files/index$" "/doc/personal/2011-gwern-yourmorals.org/epq_process.html";
+"~^/doc/history/2018-norporth\.pdf.*$" "/doc/history/2018-norpoth.pdf";
+"~^/DOC/GENETICS/HERITABLE/2015-personality.*$" "/doc/genetics/heritable/index";
+"~^/doc/existential-risk/Hr.*$" "/doc/existential-risk/";
+"~^/doc/dnb/2013-melby-lervag\.pdf.*$" "https://www.apa.org/pubs/journals/releases/dev-49-2-270.pdf";
+"~^/doc/design/M34.*$" "/404";
+"~^/doc/darknet-market/2013-06-K.*$" "/doc/darknet-market/silk-road/1/index";
+"~^/doc/colom2010\.pdf.*$" "/doc/2020-colom.pdf";
+"~^/doc/biology/2000-iapac-norvir/policy/advocacy/confidential.html$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/policy/advocacy/confidential.html";
+"~^/doc/biology/2000-iapac-norvir/clinmgt/pediatrics/pedhivmacd805.html$" "/doc/biology/clinmgt/pediatrics/index";
+"~^/doc/anime/eva/2003-evangelion-p.*$" "/doc/anime/eva/2003-evangelion";
+"~^/aaron2x75udj1.wiki-cms.com/.*$" "https://aaron2x75udj1.wiki-cms.com/";
+"~^/Sawfish$" "https://en.wikipedia.org/wiki/Sawfish_(window_manager)";
+"~^/.../transformer/gpt/fiction/2022-chun\.pdf.*$" "/doc/ai/nn/transformer/gpt/fiction/2022-chun.pdf";
+"~^/doc/zeo/gwern$" "/doc/zeo/index";
+"~^/doc/sociology/1974-martinson.pdf\..*$" "/doc/sociology/1974-martinson.pdf";
+"~^/drug-heuristic//.*$" "/drug-heuristic";
+"~^/Updates.*$" "/changelog";
+"~^/GPT-%EF%BF%BD$" "/gpt-2";
+"~^/contact.js.*$" "/links#contact";
+"~^/dnm-list$" "/dnm-survival";
+"~^/mel$" "/melatonin";
+"~^/melaton$" "/melatonin";
+"~^/mela$" "/melatonin";
+"~^/arch$" "/archiving";
+"~^/spaced-repetition//.*$" "/spaced-repetition";
+"~^/static/font/dropcap/Cheshire-Initials-A.ttf$" "/static/font/dropcap/cheshire/Cheshire-Initials-A.ttf";
+"~^/doc/statistics/order/comparison/logo.png$" "/static/img/logo/logo.png";
+"~^/story-of-your-life//.*$" "/story-of-your-life";
+"~^/suzanne-delage//.*$" "/suzanne-delage";
+"~^/legal$" "/about#license";
+"~^/static/img/index\?ote$" "https://github.com/gwern/gwern.net/tree/master/img/";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
