--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -21016,6 +21016,10 @@ ortraitfaces-1.png";
 "~^/slowing-moores-law/$" "/slowing-moores-law";
 "~^/timestamping/$" "/timestamping";
 "~^/tbi$" "/traumatic-brain-injury";
+"~^/meta-descent.*$" "/doc/ai/nn/transformer/attention/meta-descent/index";
+"~^/doc/meta-descent.*$"  "/doc/ai/nn/transformer/attention/meta-descent/index";
+"~^/claude-4.*$" "/doc/ai/nn/transformer/gpt/claude/4/index";
+"~^/doc/claude-4.*$" "/doc/ai/nn/transformer/gpt/claude/4/index";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
