--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12733,3 +12733,4 @@ default "";
 "~^/nail-growth$" "/doc/nootropic/quantified-self/nail-growth/index";
 "~^/doc/philosophy/ethics/2025-05-12-hero-functionvsformalignmentchart-humancanninalism-socialacceptabilityvshumanmeat.jpg.*$" "/doc/philosophy/ethics/2025-05-12-hero-functionvsformalignmentchart-humancannibalism-socialacceptabilityvshumanmeat.jpg";
 "~^/doc/economics/1958-McGee.pdf.*$" "/doc/economics/1958-mcgee.pdf";
+"~^/meta-descent$" "/doc/ai/nn/transformer/attention/meta-descent/index";
