--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -102,11 +102,12 @@ server {
           application/font-sfnt otf;
           text/x-gtx gtx; # Gwern.net custom format; see </static/build/GTX.hs>
           application/x-par2 par2;
-          application/octet-stream dat elc idx t7;
+          application/octet-stream dat elc idx t7 pkl;
           application/x-hdf5 h5;
           application/jsonl jsonl;
           application/x-git-packed-objects pack; # 'octet-stream'?
           application/octet-stream mtimes rev;
+          application/octet-stream weights; # NN binary
           image/vnd.adobe.photoshop psd;
           application/vnd.sqlite3 sqlite; # Or 'application/x-sqlite3'
           application/vnd.sqlite3 sqlite3;
