--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12734,3 +12734,4 @@ default "";
 "~^/doc/philosophy/ethics/2025-05-12-hero-functionvsformalignmentchart-humancanninalism-socialacceptabilityvshumanmeat.jpg.*$" "/doc/philosophy/ethics/2025-05-12-hero-functionvsformalignmentchart-humancannibalism-socialacceptabilityvshumanmeat.jpg";
 "~^/doc/economics/1958-McGee.pdf.*$" "/doc/economics/1958-mcgee.pdf";
 "~^/meta-descent$" "/doc/ai/nn/transformer/attention/meta-descent/index";
+"~^/meta-descent$" "/doc/ai/nn/transformer/attention/meta-descent/index";
