--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -21020,6 +21020,9 @@ ortraitfaces-1.png";
 "~^/doc/meta-descent.*$"  "/doc/ai/nn/transformer/attention/meta-descent/index";
 "~^/claude-4.*$" "/doc/ai/nn/transformer/gpt/claude/4/index";
 "~^/doc/claude-4.*$" "/doc/ai/nn/transformer/gpt/claude/4/index";
+"~^/blog/2025/pinball-hack$" "/blog/2025/pinball-hacking";
+"~^/blog/2025/pinball-hacks$" "/blog/2025/pinball-hacking";
+"~^/blog/2025/pinball-m.*$" "/blog/2025/pinball-hacking";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
