--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12735,3 +12735,8 @@ default "";
 "~^/doc/economics/1958-McGee.pdf.*$" "/doc/economics/1958-mcgee.pdf";
 "~^/meta-descent$" "/doc/ai/nn/transformer/attention/meta-descent/index";
 "~^/meta-descent$" "/doc/ai/nn/transformer/attention/meta-descent/index";
+"~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-05-25-gwern-chatgpto3-sumie-bellcrowmoon-2.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-05-25-gwern-chatgpto3-sumie-bellcrowmoon-2.jpg";
+"~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-05-25-gwern-chatgpto3-sumie-bellcrowmoon-1.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-05-25-gwern-chatgpto3-sumie-bellcrowmoon-1.jpg";
+"~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-05-25-gwern-chatgpto3-abstractgeometric-bellcrowmoon.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-05-25-gwern-chatgpto3-abstractgeometric-bellcrowmoon.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2025-05-27-gwern-midjourneyv6-bellcrowmoongoldencrescent.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-05-27-gwern-midjourneyv6-bellcrowmoongoldencrescent.jpg";
+"~^/doc/iq/2005-gottfredson.pdf.*$" "/doc/iq/low/2005-gottfredson.pdf";
