--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12740,3 +12740,4 @@ default "";
 "~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-05-25-gwern-chatgpto3-abstractgeometric-bellcrowmoon.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-05-25-gwern-chatgpto3-abstractgeometric-bellcrowmoon.jpg";
 "~^/doc/ai/nn/diffusion/midjourney/2025-05-27-gwern-midjourneyv6-bellcrowmoongoldencrescent.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-05-27-gwern-midjourneyv6-bellcrowmoongoldencrescent.jpg";
 "~^/doc/iq/2005-gottfredson.pdf.*$" "/doc/iq/low/2005-gottfredson.pdf";
+"~^/doc/science/physics/deutsch-1991.pdf.*$" "/doc/science/physics/1991-deutsch.pdf";
