+; fix lack of cycle checking in tag aliases

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12741,3 +12741,4 @@ default "";
 "~^/doc/ai/nn/diffusion/midjourney/2025-05-27-gwern-midjourneyv6-bellcrowmoongoldencrescent.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-05-27-gwern-midjourneyv6-bellcrowmoongoldencrescent.jpg";
 "~^/doc/iq/2005-gottfredson.pdf.*$" "/doc/iq/low/2005-gottfredson.pdf";
 "~^/doc/science/physics/deutsch-1991.pdf.*$" "/doc/science/physics/1991-deutsch.pdf";
+"~^/doc/fiction/science-fiction/2010-sandberg-eclipsephase-thinkberforeasking.pdf.*$" "/doc/fiction/science-fiction/2010-sandberg-eclipsephase-thinkbeforeasking.pdf";
