--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11839,7 +11839,7 @@ default "";
 "~^/doc/cs/cellular-automaton/2012-lu.pdf.*$" "/doc/design/typography/paper-marbling/2012-lu.pdf";
 "~^/doc/genetics/microbiome/1991-sndyer.pdf.*$" "/doc/genetics/microbiome/1991-snyder.pdf";
 "~^/doc/genetics/microbiome/1963-abrams.pdf.*$" "/doc/genetics/microbiome/germ-free/1963-abrams.pdf";
-"~^/doc/genetics/microbiome/1966-gordon-figure1-longevityadvantageofgermfreemice.png.*$" "/doc/genetics/microbiome/germ-free/1966-gordon-figure1-longevityadvantageofgermfreemice.png";
+"~^/doc/genetics/microbiome/1966-gordon-figure1-longevityadvantageofgermfreemice.png.*$" "/doc/genetics/microbiome/germ-free/1966-gordon-figure1-longevityadvantageofgermfreemice.jpg";
 "~^/doc/genetics/microbiome/1966-gordon.pdf.*$" "/doc/genetics/microbiome/germ-free/1966-gordon.pdf";
 "~^/doc/genetics/microbiome/1990-snyder.pdf.*$" "/doc/genetics/microbiome/germ-free/1990-snyder.pdf";
 "~^/doc/genetics/microbiome/1991-snyder.pdf.*$" "/doc/genetics/microbiome/germ-free/1991-snyder.pdf";
@@ -12742,3 +12742,4 @@ default "";
 "~^/doc/iq/2005-gottfredson.pdf.*$" "/doc/iq/low/2005-gottfredson.pdf";
 "~^/doc/science/physics/deutsch-1991.pdf.*$" "/doc/science/physics/1991-deutsch.pdf";
 "~^/doc/fiction/science-fiction/2010-sandberg-eclipsephase-thinkberforeasking.pdf.*$" "/doc/fiction/science-fiction/2010-sandberg-eclipsephase-thinkbeforeasking.pdf";
+"~^/doc/genetics/microbiome/germ-free/1966-gordon-figure1-longevityadvantageofgermfreemice.png.*$" "/doc/genetics/microbiome/germ-free/1966-gordon-figure1-longevityadvantageofgermfreemice.jpg";
