--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -21023,6 +21023,7 @@ ortraitfaces-1.png";
 "~^/blog/2025/pinball-hack$" "/blog/2025/pinball-hacking";
 "~^/blog/2025/pinball-hacks$" "/blog/2025/pinball-hacking";
 "~^/blog/2025/pinball-m.*$" "/blog/2025/pinball-hacking";
+"~^/blog/2025/perfume.+$" "/blog/2025/perfume";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
