--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12743,3 +12743,5 @@ default "";
 "~^/doc/science/physics/deutsch-1991.pdf.*$" "/doc/science/physics/1991-deutsch.pdf";
 "~^/doc/fiction/science-fiction/2010-sandberg-eclipsephase-thinkberforeasking.pdf.*$" "/doc/fiction/science-fiction/2010-sandberg-eclipsephase-thinkbeforeasking.pdf";
 "~^/doc/genetics/microbiome/germ-free/1966-gordon-figure1-longevityadvantageofgermfreemice.png.*$" "/doc/genetics/microbiome/germ-free/1966-gordon-figure1-longevityadvantageofgermfreemice.jpg";
+"~^/doc/psychology/personality/2010-dane.pdf.*$" "/doc/psychology/man-hands/2010-dane.pdf";
+"~^/doc/psychology/personality/2006-saino.pdf.*$" "/doc/psychology/man-hands/2006-saino.pdf";
