--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -885,7 +885,7 @@
 "~^/how-i-rewired-my-brain-to-become-fluent-in-math-rd-2494/.*$" "https://nautil.us/how-i-rewired-my-brain-to-become-fluent-in-math-rd-2494/";
 "~^/The-Fall-of-Rome.*$" "https://www.amazon.com/fall-Rome-R-Lafferty/dp/B0006CALC4";
 "~^/youtu.be/imkf6lx6id4$" "https://www.youtube.com/watch?v=imkf6lx6id4";
-"~^/doc/genetics/correlation/2017-aas\.pdf.*$" "https://www.duo.uio.no/bitstream/handle/10852/64121/preprint_cannabis.pdf?sequence=4";
+"~^/doc/genetics/correlation/2017-aas\.pdf.*$" "https://web.archive.org/web/20190501182830/https://www.duo.uio.no/bitstream/handle/10852/64121/preprint_cannabis.pdf?sequence=4";
 "~^/Silk-Road4.*$" "/silk-road#fn4";
 "~^/2019-03-08-stylegan-animefaces-network-02051-021980.pkl.xz.*$" "https://mega.nz/#!vawjXISI!F7s13yRicxDA3QYqYDL2kjnc2K7Zk3DwCIYETREmBP4";
 "~^/images/gan/stylegan/2021-01-20-tadne-interpolation-4x-random_grid_231231.smi.*$" "/image/gan/stylegan/2021-01-20-tadne-interpolation-4x-random_grid_231231.mp4";
