--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12745,3 +12745,9 @@ default "";
 "~^/doc/genetics/microbiome/germ-free/1966-gordon-figure1-longevityadvantageofgermfreemice.png.*$" "/doc/genetics/microbiome/germ-free/1966-gordon-figure1-longevityadvantageofgermfreemice.jpg";
 "~^/doc/psychology/personality/2010-dane.pdf.*$" "/doc/psychology/man-hands/2010-dane.pdf";
 "~^/doc/psychology/personality/2006-saino.pdf.*$" "/doc/psychology/man-hands/2006-saino.pdf";
+"~^/doc/psychology/man-hands/2021-blasdty-sexuallyattractivebodyparts-heterosexualfemales-forearmandhands.png.*$" "/doc/psychology/man-hands/2021-blasdty-sexuallyattractivebodyparts-heterosexualfemales-forearmandhands.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/landscape/2025-07-21-gwern-midjourneyv6-tracksinthedesertatnightblackandwhite.png.*$" "/doc/ai/nn/diffusion/midjourney/landscape/2025-07-21-gwern-midjourneyv6-tracksinthedesertatnightblackandwhite.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/landscape/2025-07-21-gwern-midjourneyv6-abstractorangewhitedesertdunes.png.*$" "/doc/ai/nn/diffusion/midjourney/landscape/2025-07-21-gwern-midjourneyv6-abstractorangewhitedesertdunes.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/landscape/2025-07-21-gwern-midjourneyv6-masksinthedesertpaths.png.*$" "/doc/ai/nn/diffusion/midjourney/landscape/2025-07-21-gwern-midjourneyv6-masksinthedesertpaths.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/landscape/2025-07-21-gwern-midjourneyv6-tracksinthedesertatnightblackandwhite-2.png.*$" "/doc/ai/nn/diffusion/midjourney/landscape/2025-07-21-gwern-midjourneyv6-tracksinthedesertatnightblackandwhite-2.jpg";
+"~^/man-hands$" "/doc/psychology/man-hands/index";
